tests/error/vararg_before.gw
#! [contains] used before
fun void test(...) {
  vararg.i;
}
